--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,17 +1,106 @@
-
-Getting Started
+General development install
 ---------------
+ * Create a python virtual-env if you dont already have one:
+ $ virtualenv --no-site-packages pve-env
+New python executable in pve-env/bin/python
+Installing distribute.............................................................................................................................................................................................done.
+Installing pip...............done.
 
-- cd <directory containing this file>
-
-- $venv/bin/python setup.py develop
-
-- $venv/bin/initialize_PhotoViewerExpress_db development.ini
-
-- $venv/bin/pserve development.ini
-
+ * Activate the virtual-env
+ $ source pve-env/bin/activate
+(pve-env) $ 
+ * Install dependencies if necessary 
 ## PIL Dependences
 apt-get install libjpeg-dev zlib1g-dev
 # If Ubuntu:
 sudo ln -s /usr/lib/i386-linux-gnu/libjpeg.so /usr/lib
 sudo ln -s /usr/lib/i386-linux-gnu/libz.so /usr/lib
+ * (pve-env) $ python setup.py develop
+   - Wait for all the packages to be installed
+ * (pve-env) $ initialize_PhotoViewerExpress_db development.ini
+   - Wait for sqlite DB initialization
+ * Edit your development.ini file and change the photos_path to
+   point to the directory the public and private directory with
+   your photos and pictures are located. You should to it in the
+   production.ini if you intend to use it for some reason.
+ * (pve-env) $ pserver development.ini
+ * Access with your browser at localhost:6543
+ * login with admin/admin
+ * In the right side of the navigation bar, go to admin -> Admin
+ * Create a new user with admin permission
+
+
+Production install (Dreamhost)
+------------------------------
+If you dont already have a more up-to-date python installed
+on you home directory, install it with:
+$ mkdir python
+$ cd python
+$ wget http://python.org/ftp/python/2.7.3/Python-2.7.3.tar.bz2
+$ tar xjf Python-2.7.3.tar.bz2
+$ cd Python-2.7.3
+$ ./configure --prefix=$HOME/python
+$ make
+$ make install
+
+ * If everything goes as expected, include these install into your path
+ $ echo 'export PATH=$HOME/python/bin:$PATH' >> ~/.bash_profile
+
+ * logout/login to make it take effect.
+
+ * Create a python virtual-env if you dont already have one:
+ $ virtualenv --no-site-packages pve-env
+New python executable in pve-env/bin/python
+Installing distribute.............................................................................................................................................................................................done.
+Installing pip...............done.
+
+ * Activate the virtual-env
+ $ debonzi@misterybox:/tmp$ source pve-env/bin/activate
+(pve-env) $ 
+ * (pve-env) $ python setup.py develop
+   - Wait for all the packages to be installed
+ * (pve-env) $ initialize_PhotoViewerExpress_db development.ini
+   - Wait for sqlite DB initialization
+ * Edit your production.ini file and change the photos_path to
+   point to the directory the public and private directory with
+   your photos and pictures are located. You should to it in the
+   development.ini if you intend to use it for some reason.
+ * Configure on panel.dreamhost.com a host with passenger enabled
+   and accept the creation of public directory on it.
+ * Inside the configured directory should exists a public directory.
+   Make a symbolic link to the static folder inside the photoviewer project
+   $ ln -s ~/<photoviewer>/photoviewerexpress/static public/
+ * Create a file named passenger_wsgi.py inside the photoviewer passenger
+   host directory with the following content, changing PHOTOVIEWERDIR with
+   your photo viewer project directory:
+
+######################################################################
+import sys, os
+
+# Switch to the virtualenv if we're not already there
+INTERP = os.path.expanduser("~/pve-env/bin/python")
+
+if sys.executable != INTERP: os.execl(INTERP, INTERP, *sys.argv)
+
+from paste.deploy import loadapp
+application = loadapp(
+    'config:' + 
+    os.path.expanduser('~/PHOTOVIEWERDIR/production.ini'))
+######################################################################
+
+ * Create a tmp directory inside the photoviewer passenger
+   host directory
+   $ mkdir tmp
+ * Create a file named restart.txt so the system will know you have
+   updated its content.
+   $ touch tmp/restart.txt
+
+ * If everything went ok, you should be able to access it from browser.
+ * Default login/password are admin/admin. At this time it is not possible to
+   change the admin passwor using the web interface, so you should create a new
+   user with admin permission, logout from admin, login using this new admin user
+   and delete the default admin user.
+
+I hope you enjoy it.
+
+Daniel Debonzi
